[tool.poetry]
name = "png-from-pdf"
version = "0.1.0"
description = ""
authors = ["Adam Leigh <adam@fluently.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pillow = "^10.4.0"
pymupdf = "^1.24.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
